# py_serial_rs

./: .envrc  .gitignore  .readthedocs.yaml  Cargo.toml  Dockerfile  LICENSE  Readme.rst  docker-build.sh  docker-run.sh  main.py  pyproject.toml  requirements.txt  shell.nix  test_coverage.sh
.github/workflows/: rust.yml
docs/source/: conf.py  index.rst
python/: demo.py  demo_threads.py
src/: lib.rs
